[package]
name = "cspice-sys"
version = "1.0.2"
edition = "2021"
build = "build.rs"
description = "Unsafe bindings to the NAIF CSPICE toolkit"
license = "LGPL-3.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
homepage = "https://github.com/jacob-pro/cspice-rs/tree/master/cspice-sys"
repository = "https://github.com/jacob-pro/cspice-rs"

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
