[package]
name = "cspice"
version = "0.1.0"
edition = "2021"
description = "Safe wrapper around the NAIF CSPICE toolkit"
license = "LGPL-3.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]

[dependencies]
cspice-sys = { path = "../cspice-sys" }
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_plain = "1.0.0"
thiserror = "1.0.31"
