[package]
name = "cspice"
version = "0.0.1"
edition = "2021"
description = "Safe wrapper around the NAIF CSPICE toolkit"
license = "LGPL-3.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>", "Contributors"]
homepage = "https://github.com/jacob-pro/cspice-rs/tree/master/cspice"
repository = "https://github.com/jacob-pro/cspice-rs"

[dependencies]
chrono = { version = "0.4.19", optional = true }
cspice-sys = { path = "../cspice-sys", version = "1.0.3" }
derive_more = "0.99.17"
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_plain = "1.0.0"
thiserror = "1.0.31"
